--- a/src/App.css
+++ b/src/App.css
@@ -73,9 +73,12 @@ i:hover {
   width: 90%;
 }
 
+.wait-time {
+  margin-bottom: 0px;
+}
+
 .time-note{
   font-style: italic;
   color: #999;
   font-size: 0.7rem;
-  line-height: 0;
 }
