--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,15 @@ footer {
 
 i {
   color: #6e506e;
-  font-size: 1.3rem;;
+  font-size: 1.3rem;
 }
 
 i:hover {
   color: #000;
+}
+
+.logo i {
+  font-size: 2rem;
 }
 
 .park{
