--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ main h1, main h2{
 
 main > div {
   width: 85%;
+  margin: 0 auto;
 }
 /* .nav-item {
   color: #777;
@@ -101,7 +102,7 @@ i:hover {
   flex-direction: row;
   justify-content: center;
   align-items: flex-end;
-  margin: 0 0 1rem 0;
+  margin: 0 auto 1rem auto;
 }
 
 #attractions-day-filter Button, #my-trip-date Button{
