--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,85 @@ main {
   min-height: 80vh;
 }
 
+#hero{
+  height: 80vh;
+  width: 100%;
+  padding: 0;
+  background-image: url("./assets/fireworks2.jpg");
+  background-size: cover;
+  background-position: bottom;
+  background-attachment: fixed;
+}
+
+#hero h1{
+  font-size: 3rem;
+}
+
+#darken{
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  padding: 0 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+}
+
+#how-to{
+  min-height: 35vh;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#how-to > div {
+  width: 30%;
+  color: #255e8f;
+  transition: background-color 0.6s;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+#how-to > div:hover {
+  cursor:auto;
+  background: linear-gradient(45deg, #925D54, #896F7D, #77759A, #7E939A, #e0b78a, #925D54, #896F7D, #77759A, #7E939A, #e0b78a);
+  background-clip: inherit;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#how-to i{
+  cursor: auto;
+  font-size: 4rem;
+  color: #255e8f;
+  margin-bottom: 2rem;
+}
+
+#explanation{
+  background-color: #e8e8e8;
+  margin: 0;
+  padding: 5rem;
+}
+
+#call-to-action{
+  padding: 3rem;
+  margin: 0;
+  height: 35vh;
+  background: linear-gradient(45deg, #925D54, #896F7D, #77759A, #7E939A, #e0b78a);
+}
+
+.cta-link {
+  color:#184063;
+  transition: color 0.4s;
+}
+
+.cta-link:hover{
+  color: #0f2538;
+}
+/* #hero h1, #hero h2{
+  padding: 0 3rem;
+} */
+
 main h1, main h2{
   text-shadow: 2px 2px 2px #333;
   padding: 1rem 0.75rem;
@@ -80,9 +159,10 @@ footer {
 /*************Nav bar, My Trip page**************/
 
 i {
-  color: #6e506e;
+  color: #255e8f;
   font-size: 1.3rem;
   cursor: pointer;
+  transition: color 0.4s;
 }
 
 .fa-circle-question{
@@ -90,7 +170,7 @@ i {
 }
 
 i:hover {
-  color: #000;
+  color: #0f2538;
 }
 
 .logo i {
@@ -130,6 +210,12 @@ i:hover {
   margin: 10px 5px 10px 5px;
   border-radius: 20px;
   box-shadow: 4px 4px 4px #777;
+}
+
+.attractionCardBody{
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .active{
@@ -285,6 +371,36 @@ i:hover {
   main {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  #hero h1{
+    font-size: 3rem;
+  }
+
+  #hero h2{
+    font-size: 1.2rem;
+  }
+
+  #how-to{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 4rem 0;
+  }
+
+  #how-to > div {
+    width: 80%;
+  }
+
+  .steps-card{
+    margin-bottom: 2.5rem;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid #ccc
+  }
+
+  #explanation{
+    padding: 2.5rem;
   }
 
   .park{
