--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@ main {
   font-size: 3rem;
 }
 
+#hero #cta-button{
+  background:#418ba3;
+  width: 10%;
+  text-align: center;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+#hero #cta-button:hover{
+  background: linear-gradient(45deg, #925D54, #896F7D, #77759A, #7E939A, #e0b78a);
+  cursor: pointer;
+}
+
 #darken{
   height: 100%;
   background-color: rgba(0,0,0,0.5);
