--- a/src/App.css
+++ b/src/App.css
@@ -382,6 +382,10 @@ i:hover {
   .attractionCards {
     width: 30%;
   }
+  
+  #hero #cta-button{
+    min-width: 120px;
+  }
 }
 
 @media screen and (max-width: 910px) {
