--- a/src/App.css
+++ b/src/App.css
@@ -433,7 +433,8 @@ i:hover {
   .steps-card{
     margin-bottom: 2.5rem;
     padding-bottom: 1.5rem;
-    border-bottom: 1px solid #ccc
+    border-bottom: 1px solid #ccc;
+    border-right: none;
   }
 
   #explanation{
